Add Demo custom directive to display Leaflet popup message

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
     <link href="css/leaflet.css" rel="stylesheet">
     <link id="loadBefore" href="css/style.css" rel="stylesheet">
 
+    <style>
+        .leaflet-popup-content{
+            margin: 10px 7px 5px;
+            min-width: 200px;
+            max-width: 250px;
+        }
+    </style>
+
 
 </head>
 
