Add  Basic Markup for PADER Components Coordination and antennas site's coordinates: - Add Layers : Regions, Antennas, Coordination HQ - ToDO add legend

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             min-width: 200px;
             max-width: 250px;
         }
+
+
+        .red {
+            border-radius: 120px;
+            opacity: .75;
+            background-color: #FF0000;
+        }
+
+        .green {
+            border-radius: 120px;
+            opacity: .75;
+            background-color: rgb(137,174,16); /*137,174,16 ::: 191, 213, 136*/ 
+        }
+    
     </style>
 
 
